--- a/src/styles/components/gallery.module.scss
+++ b/src/styles/components/gallery.module.scss
@@ -1,119 +1,133 @@
 .gallery {
-  height: 90vh;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  padding: 0 10px 10px;
-  grid-gap: 10px;
-  position: fixed;
-  top: 0;
+  z-index: -1;
 
-  .gallery_item {
-    img {
+  .gallery_item_container {
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    padding: 0 10px 10px;
+    grid-gap: 5px;
+    background-color: var(--primary-color);
+    z-index: -1;
+
+    .gallery_item {
+      img {
+        width: 100%;
+        height: 100%;
+        border: 5px solid var(--primary-grey);
+        border-radius: 7px;
+        object-fit: cover;
+      }
+
+      &:nth-child(1) {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 6;
+      }
+
+      &:nth-child(2) {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 6;
+        grid-row-end: 9;
+      }
+
+      &:nth-child(3) {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 4;
+        grid-row-end: 9;
+      }
+
+      &:nth-child(4) {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 4;
+      }
+
+      &:nth-child(5) {
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 5;
+        grid-row-end: 9;
+      }
+
+      &:nth-child(6) {
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 5;
+      }
+
+      &:nth-child(7) {
+        grid-column-start: 4;
+        grid-column-end: 6;
+        grid-row-start: 1;
+        grid-row-end: 9;
+      }
+
+      &:nth-child(8) {
+        grid-column-start: 6;
+        grid-column-end: 7;
+        grid-row-start: 1;
+        grid-row-end: 7;
+      }
+
+      &:nth-child(9) {
+        grid-column-start: 6;
+        grid-column-end: 7;
+        grid-row-start: 7;
+        grid-row-end: 9;
+      }
+
+      &:nth-child(10) {
+        grid-column-start: 7;
+        grid-column-end: 8;
+        grid-row-start: 1;
+        grid-row-end: 4;
+      }
+
+      &:nth-child(11) {
+        grid-column-start: 7;
+        grid-column-end: 8;
+        grid-row-start: 4;
+        grid-row-end: 9;
+      }
+
+      &:nth-child(12) {
+        grid-column-start: 8;
+        grid-column-end: 9;
+        grid-row-start: 1;
+        grid-row-end: 5;
+      }
+
+      &:nth-child(13) {
+        grid-column-start: 8;
+        grid-column-end: 9;
+        grid-row-start: 5;
+        grid-row-end: 9;
+      }
+    }
+
+    .color_overlay {
+      position: absolute;
       width: 100%;
-      height: 100%;
-      border: 5px solid var(--primary-grey);
-      border-radius: 7px;
-      object-fit: cover;
-    }
-
-    &:nth-child(1) {
-      grid-column-start: 1;
-      grid-column-end: 2;
-      grid-row-start: 1;
-      grid-row-end: 6;
-    }
-
-    &:nth-child(2) {
-      grid-column-start: 1;
-      grid-column-end: 2;
-      grid-row-start: 6;
-      grid-row-end: 9;
-    }
-
-    &:nth-child(3) {
-      grid-column-start: 2;
-      grid-column-end: 3;
-      grid-row-start: 4;
-      grid-row-end: 9;
-    }
-
-    &:nth-child(4) {
-      grid-column-start: 2;
-      grid-column-end: 3;
-      grid-row-start: 1;
-      grid-row-end: 4;
-    }
-
-    &:nth-child(5) {
-      grid-column-start: 3;
-      grid-column-end: 4;
-      grid-row-start: 5;
-      grid-row-end: 9;
-    }
-
-    &:nth-child(6) {
-      grid-column-start: 3;
-      grid-column-end: 4;
-      grid-row-start: 1;
-      grid-row-end: 5;
-    }
-
-    &:nth-child(7) {
-      grid-column-start: 4;
-      grid-column-end: 6;
-      grid-row-start: 1;
-      grid-row-end: 9;
-    }
-
-    &:nth-child(8) {
-      grid-column-start: 6;
-      grid-column-end: 7;
-      grid-row-start: 1;
-      grid-row-end: 7;
-    }
-
-    &:nth-child(9) {
-      grid-column-start: 6;
-      grid-column-end: 7;
-      grid-row-start: 7;
-      grid-row-end: 9;
-    }
-
-    &:nth-child(10) {
-      grid-column-start: 7;
-      grid-column-end: 8;
-      grid-row-start: 1;
-      grid-row-end: 4;
-    }
-
-    &:nth-child(11) {
-      grid-column-start: 7;
-      grid-column-end: 8;
-      grid-row-start: 4;
-      grid-row-end: 9;
-    }
-
-    &:nth-child(12) {
-      grid-column-start: 8;
-      grid-column-end: 9;
-      grid-row-start: 1;
-      grid-row-end: 5;
-    }
-
-    &:nth-child(13) {
-      grid-column-start: 8;
-      grid-column-end: 9;
-      grid-row-start: 5;
-      grid-row-end: 9;
+      height: 100vh;
+      background-color: var(--transparent-dark);
     }
   }
 
   .gallery_overlay {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
-    background-color: var(--transparent-dark);
+    height: 100vh;
 
     .gallery_overlay_item {
       position: absolute;
