--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -1,4 +1,5 @@
 .home {
   min-height: 100vh;
-  background-color: var(--primary-color);
+  // background-color: var(--primary-color);
+  z-index: -2;
 }
